--- a/config/database.yml
+++ b/config/database.yml
@@ -13,8 +13,8 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  username: qapirehwtuseax
-  password: -ulZCK2qBQXFddBb8L7HuR4w28
+  username: root
+  password: root
   socket: /var/run/mysqld/mysqld.sock
 
 development:
